--- a/WpfApplication3/MainWindow.xaml
+++ b/WpfApplication3/MainWindow.xaml
@@ -6,10 +6,8 @@
         <Menu Height="25" Margin="0,0,307,0" VerticalAlignment="Top" Width="200" HorizontalAlignment="Left" Background="{x:Null}" OpacityMask="White">
             <MenuItem Header="文件" Height="25" FontFamily="SimSun" OpacityMask="White" FontSize="14">
                 <MenuItem FocusVisualStyle="{x:Null}" x:Name="MenuItem_登陆" Header="登陆" Click="MenuItem_登陆_Click" OpacityMask="White" FontSize="14"/>
-                <MenuItem FocusVisualStyle="{x:Null}" x:Name="MenuItem_设置" Header="设置" Click="MenuItem_设置_Click" OpacityMask="White" FontSize="14"/>
                 <MenuItem FocusVisualStyle="{x:Null}" x:Name="MenuItem_退出" Header="退出" Click="MenuItem_退出_Click" OpacityMask="White" FontSize="14"/>
             </MenuItem>
-            <MenuItem Header="帮助" FontFamily="SimSun" OpacityMask="White" FontSize="14"/>
         </Menu>
         <Grid Background="#FFE5E5E5" Margin="10,102,100,99">
             <DataGrid FocusVisualStyle="{x:Null}" x:Name="DataGrid_Main" Margin="0" CellEditEnding="DataGrid_Main_CellEditEnding" BeginningEdit="DataGrid_Main_BeginningEdit" OpacityMask="White" FontSize="16" ColumnHeaderStyle="{DynamicResource DataGridColumnHeaderStyle_Main}" CellStyle="{DynamicResource DataGridCellStyle1}" Style="{DynamicResource DataGridStyle1}" RowStyle="{DynamicResource DataGridRowStyle1}" FontFamily="SimSun" AutoGenerateColumns="False">
@@ -31,14 +29,12 @@
         <ComboBox FocusVisualStyle="{x:Null}" x:Name="ComboBox_Year" HorizontalAlignment="Left" Margin="50,75,0,0" VerticalAlignment="Top" Width="80" OpacityMask="White" ToolTip="年份" SelectionChanged="ComboBox_Year_SelectionChanged" FontSize="14" FontFamily="SimSun"/>
         <ComboBox FocusVisualStyle="{x:Null}" x:Name="ComboBox_Month" HorizontalAlignment="Left" Margin="135,75,0,0" VerticalAlignment="Top" Width="60" IsReadOnly="True" OpacityMask="White" ToolTip="月份" SelectionChanged="ComboBox_Month_SelectionChanged" FontSize="14" FontFamily="SimSun"/>
         <ComboBox FocusVisualStyle="{x:Null}" x:Name="ComboBox_Type" HorizontalAlignment="Left" Margin="381,30,0,0" VerticalAlignment="Top" Width="170" Height="25" OpacityMask="White" FontSize="16" SelectionChanged="ComboBox_Type_SelectionChanged" FontFamily="SimSun"/>
-        <Button FocusVisualStyle="{x:Null}" x:Name="Button_Search" Content="查询" HorizontalAlignment="Left" Margin="360,30,0,0" VerticalAlignment="Top" Width="75" Height="25" OpacityMask="White" Click="Button_Search_Click" FontSize="14" Visibility="Collapsed"/>
         <TextBlock FocusVisualStyle="{x:Null}" HorizontalAlignment="Left" Margin="10,77,0,0" TextWrapping="Wrap" Text="日期:" VerticalAlignment="Top" Height="20" FontSize="14" FontFamily="SimSun" OpacityMask="White"/>
         <Button FocusVisualStyle="{x:Null}" x:Name="Button_刷新" Content="刷新" HorizontalAlignment="Right" Margin="0,103,10,0" VerticalAlignment="Top" Width="75" Height="25" Click="Button_刷新_Click" FontSize="14" FontFamily="SimSun" OpacityMask="White"/>
         <Button FocusVisualStyle="{x:Null}" x:Name="Button_删除" Content="删除" HorizontalAlignment="Right" Margin="0,133,10,0" VerticalAlignment="Top" Width="75" Height="25" FontSize="14" Click="Button_删除_Click" FontFamily="SimSun" OpacityMask="White"/>
         <Button FocusVisualStyle="{x:Null}" x:Name="Button_导入Excel" Content="导入数据" HorizontalAlignment="Right" Margin="0,0,10,113" VerticalAlignment="Bottom" Width="75" Height="25" Click="Button_导入Excel_Click" FontFamily="SimSun" FontSize="14" OpacityMask="White"/>
         <TextBox FocusVisualStyle="{x:Null}" x:Name="TextBox_承上月结余" HorizontalAlignment="Right" Margin="0,77,100,0" TextWrapping="Wrap" Text="0" VerticalAlignment="Top" Width="120" FontSize="14" Height="20" FontFamily="SimSun" IsReadOnly="True" OpacityMask="White"/>
         <TextBlock HorizontalAlignment="Right" Margin="0,78,225,0" TextWrapping="Wrap" Text="承上月结余:" VerticalAlignment="Top" FontSize="14" RenderTransformOrigin="1.37,0.44" Height="20" FontFamily="SimSun" OpacityMask="White"/>
-        <Button FocusVisualStyle="{x:Null}" x:Name="Button_修改结余" Content="修改" HorizontalAlignment="Right" Margin="0,80,100,0" VerticalAlignment="Top" Width="40" Click="Button_修改结余_Click" Height="20" FontFamily="SimSun" Visibility="Collapsed"/>
         <TextBlock HorizontalAlignment="Right" Margin="0,0,533,35" TextWrapping="Wrap" Text="借方发生额累计(年)：" VerticalAlignment="Bottom" FontFamily="SimSun" FontSize="14" OpacityMask="White"/>
         <TextBlock HorizontalAlignment="Right" Margin="0,0,243,35" TextWrapping="Wrap" Text="贷方发生额累计(年)：" VerticalAlignment="Bottom" FontFamily="SimSun" FontSize="14" OpacityMask="White"/>
         <TextBlock x:Name="TextBlock_借方发生额累计" HorizontalAlignment="Right" Margin="0,0,408,34" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Bottom" FontSize="18" Width="120" FontFamily="SimSun" FontWeight="Bold" OpacityMask="White"/>
@@ -46,8 +42,8 @@
         <TextBlock HorizontalAlignment="Left" Margin="256,28,0,0" TextWrapping="Wrap" Text="银行日记账" VerticalAlignment="Top" FontSize="24" FontFamily="SimSun" OpacityMask="White"/>
         <TextBlock HorizontalAlignment="Right" Margin="0,0,533,75" TextWrapping="Wrap" Text="借方发生额合计(月)：" VerticalAlignment="Bottom" FontFamily="SimSun" FontSize="14" OpacityMask="White"/>
         <TextBlock HorizontalAlignment="Right" Margin="0,0,243,75" TextWrapping="Wrap" Text="贷方发生额合计(月)：" VerticalAlignment="Bottom" FontFamily="SimSun" FontSize="14" OpacityMask="White"/>
-        <TextBlock x:Name="TextBlock_借方发生额累计_月" HorizontalAlignment="Right" Margin="0,0,408,73" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Bottom" FontSize="18" Width="120" FontFamily="SimSun" FontWeight="Bold" OpacityMask="White"/>
-        <TextBlock x:Name="TextBlock_贷方发生额累计_月" HorizontalAlignment="Right" Margin="0,0,118,73" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Bottom" FontSize="18" Width="120" FontFamily="SimSun" FontWeight="Bold" OpacityMask="White"/>
+        <TextBlock x:Name="TextBlock_借方发生额合计" HorizontalAlignment="Right" Margin="0,0,408,73" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Bottom" FontSize="18" Width="120" FontFamily="SimSun" FontWeight="Bold" OpacityMask="White"/>
+        <TextBlock x:Name="TextBlock_贷方发生额合计" HorizontalAlignment="Right" Margin="0,0,118,73" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Bottom" FontSize="18" Width="120" FontFamily="SimSun" FontWeight="Bold" OpacityMask="White"/>
         <Popup Name="Popup_登陆" StaysOpen="True" Placement="Mouse">
             <Border BorderThickness="2" BorderBrush="SteelBlue" Width="400" Height="200">
                 <Grid Background="White">
