--- a/WpfApplication3/MainWindow.xaml
+++ b/WpfApplication3/MainWindow.xaml
@@ -1,14 +1,20 @@
 ﻿<Window x:Class="Wpf.MainWindow" xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="金字塔财务管理工具" Height="600" Width="800" WindowStartupLocation="CenterScreen" Closed="Window_Closed">
     <Grid >
+        <!-- 菜单栏 -->
         <Menu Height="25" Margin="0,0,307,0" VerticalAlignment="Top" Width="200" HorizontalAlignment="Left" >
             <MenuItem Header="文件" Height="25">
                 <MenuItem x:Name="MenuItem_登陆" Header="登陆" Click="MenuItem_登陆_Click"/>
                 <MenuItem x:Name="MenuItem_退出" Header="退出" Click="MenuItem_退出_Click"/>
             </MenuItem>
         </Menu>
+        <!-- 放DataGrid的Grid -->
         <Grid Background="#FFE5E5E5" Margin="10,102,100,99">
-            <DataGrid x:Name="DataGrid_Main" Margin="0" CellEditEnding="DataGrid_Main_CellEditEnding" BeginningEdit="DataGrid_Main_BeginningEdit"  FontSize="16" FontFamily="SimSun" AutoGenerateColumns="False">
+        	<!-- 主要DataGrid -->
+            <DataGrid x:Name="DataGrid_Main" Margin="0" 
+            	CellEditEnding="DataGrid_Main_CellEditEnding" 
+            	BeginningEdit="DataGrid_Main_BeginningEdit" 
+            	AutoGenerateColumns="False">
                 <DataGrid.Columns>
                     <DataGridTextColumn Header="DBId" Visibility="Collapsed" Binding="{Binding DBId}"/>
                     <DataGridTextColumn Header="序号" IsReadOnly="True" Binding="{Binding 序号}"/>
@@ -22,26 +28,28 @@
                 </DataGrid.Columns>
             </DataGrid>
         </Grid>
-        <StatusBar Height="25" Margin="0" VerticalAlignment="Bottom" FontFamily="SimSun"/>
-        <Button x:Name="Button_Excel" Content="Excel" HorizontalAlignment="Right" Margin="0,0,10,143" VerticalAlignment="Bottom" Width="75" Click="Button_Excel_Click" Height="25" FontSize="14" FontFamily="SimSun" />
-        <ComboBox x:Name="ComboBox_Year" HorizontalAlignment="Left" Margin="50,75,0,0" VerticalAlignment="Top" Width="80"  ToolTip="年份" SelectionChanged="ComboBox_Year_SelectionChanged" FontSize="14" FontFamily="SimSun"/>
-        <ComboBox x:Name="ComboBox_Month" HorizontalAlignment="Left" Margin="135,75,0,0" VerticalAlignment="Top" Width="60" IsReadOnly="True"  ToolTip="月份" SelectionChanged="ComboBox_Month_SelectionChanged" FontSize="14" FontFamily="SimSun"/>
-        <ComboBox x:Name="ComboBox_Type" HorizontalAlignment="Left" Margin="381,30,0,0" VerticalAlignment="Top" Width="170" Height="25"  FontSize="16" SelectionChanged="ComboBox_Type_SelectionChanged" FontFamily="SimSun"/>
-        <TextBlock HorizontalAlignment="Left" Margin="10,77,0,0" TextWrapping="Wrap" Text="日期:" VerticalAlignment="Top" Height="20" FontSize="14" FontFamily="SimSun" />
-        <Button x:Name="Button_刷新" Content="刷新" HorizontalAlignment="Right" Margin="0,103,10,0" VerticalAlignment="Top" Width="75" Height="25" Click="Button_刷新_Click" FontSize="14" FontFamily="SimSun" />
-        <Button x:Name="Button_删除" Content="删除" HorizontalAlignment="Right" Margin="0,133,10,0" VerticalAlignment="Top" Width="75" Height="25" FontSize="14" Click="Button_删除_Click" FontFamily="SimSun" />
-        <Button x:Name="Button_导入Excel" Content="导入数据" HorizontalAlignment="Right" Margin="0,0,10,113" VerticalAlignment="Bottom" Width="75" Height="25" Click="Button_导入Excel_Click" FontFamily="SimSun" FontSize="14" />
-        <TextBox x:Name="TextBox_承上月结余" HorizontalAlignment="Right" Margin="0,77,100,0" TextWrapping="Wrap" Text="0" VerticalAlignment="Top" Width="120" FontSize="14" Height="20" FontFamily="SimSun" IsReadOnly="True" />
-        <TextBlock HorizontalAlignment="Right" Margin="0,78,225,0" TextWrapping="Wrap" Text="承上月结余:" VerticalAlignment="Top" FontSize="14" RenderTransformOrigin="1.37,0.44" Height="20" FontFamily="SimSun" />
-        <TextBlock HorizontalAlignment="Right" Margin="0,0,533,35" TextWrapping="Wrap" Text="借方发生额累计(年)：" VerticalAlignment="Bottom" FontFamily="SimSun" FontSize="14" />
-        <TextBlock HorizontalAlignment="Right" Margin="0,0,243,35" TextWrapping="Wrap" Text="贷方发生额累计(年)：" VerticalAlignment="Bottom" FontFamily="SimSun" FontSize="14" />
-        <TextBlock x:Name="TextBlock_借方发生额累计" HorizontalAlignment="Right" Margin="0,0,408,34" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Bottom" FontSize="18" Width="120" FontFamily="SimSun" FontWeight="Bold" />
-        <TextBlock x:Name="TextBlock_贷方发生额累计" HorizontalAlignment="Right" Margin="0,0,118,34" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Bottom" FontSize="18" Width="120" FontFamily="SimSun" FontWeight="Bold" />
-        <TextBlock HorizontalAlignment="Left" Margin="256,28,0,0" TextWrapping="Wrap" Text="银行日记账" VerticalAlignment="Top" FontSize="24" FontFamily="SimSun" />
-        <TextBlock HorizontalAlignment="Right" Margin="0,0,533,75" TextWrapping="Wrap" Text="借方发生额合计(月)：" VerticalAlignment="Bottom" FontFamily="SimSun" FontSize="14" />
-        <TextBlock HorizontalAlignment="Right" Margin="0,0,243,75" TextWrapping="Wrap" Text="贷方发生额合计(月)：" VerticalAlignment="Bottom" FontFamily="SimSun" FontSize="14" />
-        <TextBlock x:Name="TextBlock_借方发生额合计" HorizontalAlignment="Right" Margin="0,0,408,73" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Bottom" FontSize="18" Width="120" FontFamily="SimSun" FontWeight="Bold" />
-        <TextBlock x:Name="TextBlock_贷方发生额合计" HorizontalAlignment="Right" Margin="0,0,118,73" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Bottom" FontSize="18" Width="120" FontFamily="SimSun" FontWeight="Bold" />
+        <!--底部状态栏-->
+        <StatusBar Height="25" Margin="0" VerticalAlignment="Bottom" />
+        <Button x:Name="Button_Excel" Content="Excel" HorizontalAlignment="Right" Margin="0,0,10,143" VerticalAlignment="Bottom" Width="75" Click="Button_Excel_Click" Height="25"   />
+        <ComboBox x:Name="ComboBox_Year" HorizontalAlignment="Left" Margin="50,75,0,0" VerticalAlignment="Top" Width="80"  ToolTip="年份" SelectionChanged="ComboBox_Year_SelectionChanged"  />
+        <ComboBox x:Name="ComboBox_Month" HorizontalAlignment="Left" Margin="135,75,0,0" VerticalAlignment="Top" Width="60" IsReadOnly="True"  ToolTip="月份" SelectionChanged="ComboBox_Month_SelectionChanged"  />
+        <ComboBox x:Name="ComboBox_Type" HorizontalAlignment="Left" Margin="381,30,0,0" VerticalAlignment="Top" Width="170" Height="25"  FontSize="16" SelectionChanged="ComboBox_Type_SelectionChanged" />
+        <TextBlock HorizontalAlignment="Left" Margin="10,77,0,0" TextWrapping="Wrap" Text="日期:" VerticalAlignment="Top" Height="20"   />
+        <Button x:Name="Button_刷新" Content="刷新" HorizontalAlignment="Right" Margin="0,103,10,0" VerticalAlignment="Top" Width="75" Height="25" Click="Button_刷新_Click"   />
+        <Button x:Name="Button_删除" Content="删除" HorizontalAlignment="Right" Margin="0,133,10,0" VerticalAlignment="Top" Width="75" Height="25"  Click="Button_删除_Click"  />
+        <Button x:Name="Button_导入Excel" Content="导入数据" HorizontalAlignment="Right" Margin="0,0,10,113" VerticalAlignment="Bottom" Width="75" Height="25" Click="Button_导入Excel_Click"   />
+        <TextBox x:Name="TextBox_承上月结余" HorizontalAlignment="Right" Margin="0,77,100,0" TextWrapping="Wrap" Text="0" VerticalAlignment="Top" Width="120"  Height="20"  IsReadOnly="True" />
+        <TextBlock HorizontalAlignment="Right" Margin="0,78,225,0" TextWrapping="Wrap" Text="承上月结余:" VerticalAlignment="Top"  RenderTransformOrigin="1.37,0.44" Height="20"  />
+        <TextBlock HorizontalAlignment="Right" Margin="0,0,533,35" TextWrapping="Wrap" Text="借方发生额累计(年)：" VerticalAlignment="Bottom"   />
+        <TextBlock HorizontalAlignment="Right" Margin="0,0,243,35" TextWrapping="Wrap" Text="贷方发生额累计(年)：" VerticalAlignment="Bottom"   />
+        <TextBlock x:Name="TextBlock_借方发生额累计" HorizontalAlignment="Right" Margin="0,0,408,34" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Bottom" FontSize="18" Width="120"  FontWeight="Bold" />
+        <TextBlock x:Name="TextBlock_贷方发生额累计" HorizontalAlignment="Right" Margin="0,0,118,34" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Bottom" FontSize="18" Width="120"  FontWeight="Bold" />
+        <TextBlock HorizontalAlignment="Left" Margin="256,28,0,0" TextWrapping="Wrap" Text="银行日记账" VerticalAlignment="Top" FontSize="24"  />
+        <TextBlock HorizontalAlignment="Right" Margin="0,0,533,75" TextWrapping="Wrap" Text="借方发生额合计(月)：" VerticalAlignment="Bottom"   />
+        <TextBlock HorizontalAlignment="Right" Margin="0,0,243,75" TextWrapping="Wrap" Text="贷方发生额合计(月)：" VerticalAlignment="Bottom"   />
+        <TextBlock x:Name="TextBlock_借方发生额合计" HorizontalAlignment="Right" Margin="0,0,408,73" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Bottom" FontSize="18" Width="120"  FontWeight="Bold" />
+        <TextBlock x:Name="TextBlock_贷方发生额合计" HorizontalAlignment="Right" Margin="0,0,118,73" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Bottom" FontSize="18" Width="120"  FontWeight="Bold" />
+        <!--登陆弹出窗口-->
         <Popup Name="Popup_登陆" StaysOpen="True" Placement="Mouse">
             <Border BorderThickness="2" BorderBrush="SteelBlue" Width="400" Height="200">
                 <Grid Background="White">
@@ -50,16 +58,17 @@
                     </DockPanel>
                     <Grid Margin="0,30,0,0" >
                         <TextBox Height="25" x:Name="TextBox_登陆_用户名" Width="200" HorizontalAlignment="Center" VerticalContentAlignment="Center" Margin="151,51,45,90" Text="admin" />
-                        <PasswordBox x:Name="PasswordBox_登陆_密码" HorizontalAlignment="Left" Margin="151,88,0,0" VerticalAlignment="Top" Height="25" Width="200" FontSize="20" FontFamily="SimSun" />
+                        <PasswordBox x:Name="PasswordBox_登陆_密码" HorizontalAlignment="Left" Margin="151,88,0,0" VerticalAlignment="Top" Height="25" Width="200" FontSize="20"  />
                         <Button FocusVisualStyle="{x:Null}" x:Name="Button_登陆_登陆" Content="登陆" HorizontalAlignment="Left" Margin="151,124,0,0" VerticalAlignment="Top" Width="75" Height="25" Click="Button_登陆_登陆_Click"/>
                         <Button FocusVisualStyle="{x:Null}" x:Name="Button_登陆_取消" Content="取消" HorizontalAlignment="Left" Margin="248,124,0,0" VerticalAlignment="Top" Width="75" Height="25" Click="Button_登陆_取消_Click"/>
                         <TextBlock HorizontalAlignment="Left" Margin="49,51,0,0" TextWrapping="Wrap" Text="用户名：" VerticalAlignment="Top"/>
                         <TextBlock HorizontalAlignment="Left" Margin="49,88,0,0" TextWrapping="Wrap" Text="密  码：" VerticalAlignment="Top"/>
-                        <TextBlock x:Name="TextBlock_密码错误提示" HorizontalAlignment="Left" Margin="49,16,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="300" Height="28" FontSize="18" FontFamily="SimSun" FontWeight="Bold" Foreground="#FFA82323" />
+                        <TextBlock x:Name="TextBlock_密码错误提示" HorizontalAlignment="Left" Margin="49,16,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="300" Height="28" FontSize="18"  FontWeight="Bold" Foreground="#FFA82323" />
                     </Grid>
                 </Grid>
             </Border>
         </Popup>
+        <!--未登陆的遮盖面板-->
         <Grid x:Name="Grid_遮盖" Margin="0,25,0,0" Background="White" Visibility="Collapsed" >
             <Image HorizontalAlignment="Right" Height="194" Margin="0,0,62,68" VerticalAlignment="Bottom" Width="538" Source="Image/Pyramid_Logo_V1_c_140204.png"/>
         </Grid>
